# ChangeLog for media-tv/mythtv
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-tv/cvs-repo/gentoo-x86/media-tv/mythtv/ChangeLog,v 1.243 2008/06/03 14:20:56 cardoe Exp $

  03 Jun 2008; Doug Goldstein <cardoe@gentoo.org> mythtv-0.21_p17435.ebuild:
  change XvMC elog message. bug #224723

  03 Jun 2008; Jeroen Roovers <jer@gentoo.org> mythtv-0.21_p17435.ebuild:
  Fix syntax error (bug #224699).

  02 Jun 2008; Doug Goldstein <cardoe@gentoo.org> mythtv-0.21_p17435.ebuild:
  missing * from x11-libs/qt-3. bug #224649

*mythtv-0.21_p17435 (02 Jun 2008)

  02 Jun 2008; Doug Goldstein <cardoe@gentoo.org>
  +mythtv-0.21_p17435.ebuild:
  upstream revision bump. Remove OpenGL XvMC and OpenGL video support after
  discussions with upstream and how other distros are packaging MythTV.
  Support for those features is known to be an issue. Most users don't want
  it anyway since they have worse performance unless you've got a specific
  Quatro card. Additionally, we're always using XvMCW and requiring users to
  configure their XvMC provider via eselect-xvmc, based on patch from Rick
  Harris <rickfharris@yahoo.com.au> on bug #220857

  29 May 2008; Ali Polatel <hawking@gentoo.org> mythtv-0.21_p16867.ebuild,
  mythtv-0.21_p16926.ebuild, mythtv-0.21_p16944.ebuild,
  mythtv-0.21_p17100.ebuild, mythtv-0.22_alpha16929.ebuild,
  mythtv-0.22_alpha17132.ebuild:
  python_mod_optimize is ROOT aware. Fixed python_mod_cleanup.

*mythtv-0.22_alpha17132 (23 Apr 2008)
*mythtv-0.21_p17100 (23 Apr 2008)

  23 Apr 2008; Doug Goldstein <cardoe@gentoo.org>
  +mythtv-0.21_p17100.ebuild, +mythtv-0.22_alpha17132.ebuild:
  bump to newer upstream revisions

*mythtv-0.21_p16944 (04 Apr 2008)

  04 Apr 2008; Doug Goldstein <cardoe@gentoo.org> mythtv-0.21_p16867.ebuild,
  mythtv-0.21_p16926.ebuild, +mythtv-0.21_p16944.ebuild:
  fix JobQueue timing and missing &&. Add --disable-xvmcw

*mythtv-0.22_alpha16929 (03 Apr 2008)
