@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX bash_profile 63 RMD160 71ed6a00c824f8d2704b65371e54adb85ca6d861 SHA1 cd4bc03298d30fadb759d1a2463e930441c5a5e7 SHA256 9a753f699d07b5f481374d13ea3f2b2439a22f3a9a49b6280cc8d9eebf0b2ca9
 AUX mythbackend-0.18.2.conf 1430 RMD160 f966c40618592cae62a2e4345bb4cd5847ec0de6 SHA1 2a3cb59593c4fd1ba431b4ebe70b91782a418a02 SHA256 0b6d0514d410bdcbeaebded48488926fc2941edaeee518794d9884693a4eb9db
 AUX mythbackend-0.18.2.rc 1128 RMD160 0297452b3d9fe09479c737d136a73171a35eb643 SHA1 df4fe1ca7750c3ed27c9f5bbeb28dcebb36f9b1d SHA256 be994a8b6690e830820e82316f4ccce5b7f84ce68213de75e3740818227f6f3c
@@ -13,7 +16,14 @@ EBUILD mythtv-0.21_p16926.ebuild 9433 RMD160 5d8aa6a3abd06123978b9edfcfc5676a9a4
 EBUILD mythtv-0.21_p16944.ebuild 9460 RMD160 7e3e70e00f8e88ba58eee81d44dea750111e6d0f SHA1 4c99bf53b09ce3c181885fedee1d3a7d63c2ba24 SHA256 b8530f31e928c9d588c26e521ff20774da857b02d9c43c67eafa090da634f47e
 EBUILD mythtv-0.21_p17100.ebuild 9460 RMD160 5fa8563417b5907da1db111da9f10f25b0d0772a SHA1 1d7bc7d7c1c415ac5d60513ca736d50a4bf79031 SHA256 de7650ff8d9ba18fef9da1718a4d5b7ffc2718389a67fcab527dfe458e4c1f72
 EBUILD mythtv-0.21_p17435.ebuild 9111 RMD160 dc4575dd529eae38e2eda9d6b611edd160089366 SHA1 d3e4b4c70b5d876e115fd9524a4a87b03d58a858 SHA256 5f0067f1502f28b2b040f88cce3be95bf8123d4436c0153ea2829acf348227fc
-EBUILD mythtv-0.22_alpha16929.ebuild 9577 RMD160 815971a945d7a5be521f2a57278c9482510a2a01 SHA1 66e97486555a3f4285ccfc99856eb6453a480c72 SHA256 c72ae61c60f9a874b20d27601d72cfab9f049ae098349cf48232c30e2506c910
 EBUILD mythtv-0.22_alpha17132.ebuild 9577 RMD160 c2bfcd5cbd4b1f306d49edeca98ba8ba7d5ee775 SHA1 40004d8bdf4cb4db9dab802f82301f8f761c28e6 SHA256 6f642c40b8389a7ea4196a52fc33d0adae0d1f6257becd4eb32860f3eb1e9980
-MISC ChangeLog 46818 RMD160 958f3091adc90ba374afed711bc98ca8391adacf SHA1 262fe253f8ec8287cedcddaf66fb2c42d39f1b1b SHA256 4b1706edba49ad9e341dfe4075877aa7a082c69a5cede4738f41e3ce6b71d843
+EBUILD mythtv-0.22_alpha17449.ebuild 8740 RMD160 0836daf0091873fe4ded9d056d69a495db15278b SHA1 aef50f687fa4e912f3acaae031450d0916a07053 SHA256 caa0e85aed6aac25278d0b99edea67a2c7ee0581d326947b0d621c44c87221bd
+MISC ChangeLog 47037 RMD160 3820dae525ec9ea067b170618ce9196f82e1f7a5 SHA1 942ac35cd0d4fe58e2c6c84de27fdb1185ad8c01 SHA256 3820bd31a6fe2c06817a3569f9ae39ce78211636fe20adf7de7a08d0aa89d5f0
 MISC metadata.xml 4714 RMD160 c65d058e83e36342d6a49b63a6e9609e11242b66 SHA1 0de80f93ca1adfede5783d30a45953ec4cd27c9b SHA256 7501a841c218dd17bee56aeefcfc60194241b3a5468898850c5bedf5dafd28e5
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.9 (GNU/Linux)
+
+iEYEARECAAYFAkhOkV4ACgkQoeSe8B0zEfzolwCfZsPuDJzftk4BG6G920vC7ApM
+hh4AnRvmwfyGG/+T2wqrHM8/QSKJzx9m
+=kSEb
+-----END PGP SIGNATURE-----
