@@ -1,6 +1,12 @@
 # ChangeLog for media-tv/mythtv
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-tv/cvs-repo/gentoo-x86/media-tv/mythtv/ChangeLog,v 1.243 2008/06/03 14:20:56 cardoe Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-tv/cvs-repo/gentoo-x86/media-tv/mythtv/ChangeLog,v 1.244 2008/06/10 14:35:54 cardoe Exp $
+
+*mythtv-0.22_alpha17449 (10 Jun 2008)
+
+  10 Jun 2008; Doug Goldstein <cardoe@gentoo.org>
+  -mythtv-0.22_alpha16929.ebuild, +mythtv-0.22_alpha17449.ebuild:
+  update to newer trunk revision. sync ebuild features to 0.21
 
   03 Jun 2008; Doug Goldstein <cardoe@gentoo.org> mythtv-0.21_p17435.ebuild:
   change XvMC elog message. bug #224723
